--- a/views/index.pug
+++ b/views/index.pug
@@ -8,9 +8,9 @@ block layout-content
     div.links
       a(href="/assignments")
         div.NavButton Assignments
-      a(href="https://github.com/alexgpitts") GitHub
-      a(href="https://www.youtube.com/channel/UCcKKS_xiZP7_-riaaGBYG9Q") YouTube
-      a(href="https://photos.app.goo.gl/7oV9w3SNPeDvL6KG6") Photo Album
+      a(href="https://github.com/alexgpitts", target="_blank") GitHub
+      a(href="https://www.youtube.com/channel/UCcKKS_xiZP7_-riaaGBYG9Q",target="_blank") YouTube
+      a(href="https://photos.app.goo.gl/7oV9w3SNPeDvL6KG6", target="_blank") Photo Album
       
   main
     div.about
