--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -89,6 +89,7 @@ img{
 figcaption{
     padding-top: 10px;
     text-align: center;
+    padding-bottom: 10px;
 }
 
 @media screen and (max-width: 700px) {
