--- a/views/LBCC.pug
+++ b/views/LBCC.pug
@@ -13,9 +13,13 @@ block layout-content
       
   main
     div.assignments
-      h1 Assignments
+      h1 LBCC Projects
+      p Some of my Projects from Linn Benton Community College
       div.assignments_container
-        a(href="/LBCC").Proj LBCC Projects
+        a(href="https://alexpitts.herokuapp.com/", target="_blank").Proj
+            img(src="./images/Website.png")#website
+            figcaption Home Website - CS290
+            //- #website.Proj CS 290 Website
         //- a(href="").Proj proj1
         //- a(href="").Proj proj2
         //- a(href="").Proj proj3
@@ -25,4 +29,3 @@ block layout-content
   footer 
     a(href="mailto: alexgpitts@gmail.com").foot contact me
       
-
