--- a/views/index.pug
+++ b/views/index.pug
@@ -3,14 +3,13 @@ extends layout
 block layout-content
   header
     div.head
-      h1 Alex Pitts
-      p Home
+      h1 
+        a(href="/..").home Alex Pitts
     div.links
-      a(href="/assignments")
-        div.NavButton Assignments
-      a(href="https://github.com/alexgpitts", target="_blank") GitHub
-      a(href="https://www.youtube.com/channel/UCcKKS_xiZP7_-riaaGBYG9Q",target="_blank") YouTube
-      a(href="https://photos.app.goo.gl/7oV9w3SNPeDvL6KG6", target="_blank") Photo Album
+      a(href="/assignments").button Assignments
+      a(href="https://github.com/alexgpitts", target="_blank").button GitHub
+      a(href="https://www.youtube.com/channel/UCcKKS_xiZP7_-riaaGBYG9Q",target="_blank").button YouTube
+      a(href="https://photos.app.goo.gl/7oV9w3SNPeDvL6KG6", target="_blank").button Photo Album
       
   main
     div.about
