Changed image format to .jpg

--- a/views/LBCC.pug
+++ b/views/LBCC.pug
@@ -17,7 +17,7 @@ block layout-content
       p Some of my Projects from Linn Benton Community College
       div.assignments_container
         a(href="https://alexpitts.herokuapp.com/", target="_blank").Proj
-            img(src="./images/Website.png")#website
+            img(src="./images/Website.jpg")#website
             figcaption Home Website - CS290
             //- #website.Proj CS 290 Website
         //- a(href="").Proj proj1
