Fixed Footer on home page

--- a/views/index.pug
+++ b/views/index.pug
@@ -21,5 +21,5 @@ block layout-content
   img(src='./images/diploma.jpg')#diploma
   figcaption Associate of Science in Computer Science - Linn Benton Community College
   footer 
-    a(href="mailto: alexgpitts@gmail.com") contact me
+    a(href="mailto: alexgpitts@gmail.com").foot contact me
       
