Added mass of jupiter project
added ph 212 project

--- a/views/LBCC.pug
+++ b/views/LBCC.pug
@@ -20,7 +20,10 @@ block layout-content
             img(src="./images/Website.jpg")#website
             figcaption Home Website - CS290
             //- #website.Proj CS 290 Website
-        //- a(href="").Proj proj1
+        
+        a(href="/LBCC/Jupiter").Proj 
+            img(src="./images/Jupiter.jpg")#website
+            figcaption Physics 212 (Mass Of Jupiter)
         //- a(href="").Proj proj2
         //- a(href="").Proj proj3
         //- a(href="").Proj proj4
