--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -76,6 +76,17 @@ img{
     max-width: 500px;
 }
 
+#poster{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    max-width: 1500px;
+    width: 70%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+}
+
 .description{
     padding-bottom: 10px;
     font-size: large;
@@ -115,6 +126,16 @@ figcaption{
     }
     .about{
         font-size: large;
+    }
+    #poster{
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        max-width: 1500px;
+        width: 90%;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        
     }
 }
 
