Added Page for OSU assignments

--- a/views/OSU.pug
+++ b/views/OSU.pug
@@ -13,11 +13,15 @@ block layout-content
       
   main
     div.assignments
-      h1 Assignments
+      h1 LBCC Projects
+      p Some of my Projects from Oregon State University
       div.assignments_container
-        a(href="/LBCC").Proj LBCC Projects
-        a(href="/OSU").Proj OSU Projects
-        //- a(href="").Proj proj1
+        a(href="").Proj
+            img(src="")#website
+            figcaption Small Shell
+            //- #website.Proj CS 290 Website
+        
+        
         //- a(href="").Proj proj2
         //- a(href="").Proj proj3
         //- a(href="").Proj proj4
@@ -26,4 +30,3 @@ block layout-content
   footer 
     a(href="mailto: alexgpitts@gmail.com").foot contact me
       
-
