added small shell

--- a/views/OSU.pug
+++ b/views/OSU.pug
@@ -16,8 +16,8 @@ block layout-content
       h1 LBCC Projects
       p Some of my Projects from Oregon State University
       div.assignments_container
-        a(href="").Proj
-            img(src="")#website
+        a(href="/OSU/smallsh").Proj
+            img(src="./images/smallsh.png")#website
             figcaption Small Shell
             //- #website.Proj CS 290 Website
         
