--- a/views/smallsh.pug
+++ b/views/smallsh.pug
@@ -16,9 +16,13 @@ block layout-content
     div.about
         h1.aboutme Small Shell Assignment (CS 344)
         p.description This project asked us to make a basic shell that could be launched within bash. The Shell used forks and exec to preform bash commands. The shell can also redirect standard in and out to create and read files. 
-        p.description Header File:
+        p.description You can copy this code and store it into two files, "smallsh.h" and "smallsh.c." Then using GCC, you can compile smallsh.c and run the shell by following the instructions in the GitHub repository.  
+        div
+            a(href="https://github.com/alexgpitts/CS344-Project3-smallsh-Portfolio-Assignment", target="_blank").button1 Code on GitHub
+           
+        p.description Header File (smallsh.h):
             script(src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Falexgpitts%2FCS344-Project3-smallsh-Portfolio-Assignment%2Fblob%2Fmain%2Fsmallsh.h&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on")
-        p.description Main Code:
+        p.description Main Code (smallsh.c):
             script(src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Falexgpitts%2FCS344-Project3-smallsh-Portfolio-Assignment%2Fblob%2Fmain%2Fsmallsh.c&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on")    
       
 
