--- a/views/smallsh.pug
+++ b/views/smallsh.pug
@@ -19,11 +19,11 @@ block layout-content
         p.description You can copy this code and store it into two files, "smallsh.h" and "smallsh.c." Then using GCC, you can compile smallsh.c and run the shell by following the instructions in the GitHub repository.  
         div
             a(href="https://github.com/alexgpitts/CS344-Project3-smallsh-Portfolio-Assignment", target="_blank").button1 Code on GitHub
-           
-        p.description Header File (smallsh.h):
-            script(src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Falexgpitts%2FCS344-Project3-smallsh-Portfolio-Assignment%2Fblob%2Fmain%2Fsmallsh.h&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on")
-        p.description Main Code (smallsh.c):
-            script(src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Falexgpitts%2FCS344-Project3-smallsh-Portfolio-Assignment%2Fblob%2Fmain%2Fsmallsh.c&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on")    
+        <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@alexgpitts/Small-Shell?lite=true"></iframe
+        //- p.description Header File (smallsh.h):
+        //-     script(src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Falexgpitts%2FCS344-Project3-smallsh-Portfolio-Assignment%2Fblob%2Fmain%2Fsmallsh.h&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on")
+        //- p.description Main Code (smallsh.c):
+        //-     script(src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Falexgpitts%2FCS344-Project3-smallsh-Portfolio-Assignment%2Fblob%2Fmain%2Fsmallsh.c&style=github&showBorder=on&showLineNumbers=on&showFileMeta=on&showCopy=on")    
       
 
 
