--- a/views/smallsh.pug
+++ b/views/smallsh.pug
@@ -19,9 +19,8 @@ block layout-content
         p.description You can copy this code and store it into two files, "smallsh.h" and "smallsh.c." Then using GCC, you can compile smallsh.c and run the shell by following the instructions in the GitHub repository.  
         div
             a(href="https://github.com/alexgpitts/CS344-Project3-smallsh-Portfolio-Assignment", target="_blank").button1 Code on GitHub
-        <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@alexgpitts/Small-Shell?lite=true"></iframe
+        iframe(frameborder="0" width="100%" height="500px" src="https://replit.com/@alexgpitts/Small-Shell?lite=true")
 
-  
   footer  
     a(href="mailto: alexgpitts@gmail.com").foot contact me
       
