--- a/views/smallsh.pug
+++ b/views/smallsh.pug
@@ -9,7 +9,8 @@ block layout-content
     div.links
       a(href="/assignments").button Assignments
       a(href="https://github.com/alexgpitts", target="_blank").button GitHub
-      a(href="https://www.youtube.com/channel/UCcKKS_xiZP7_-riaaGBYG9Q",target="_blank").button YouTube
+      a(href="https://github.com/alexgpitts", target="_blank").button Resume
+      //- a(href="https://www.youtube.com/channel/UCcKKS_xiZP7_-riaaGBYG9Q",target="_blank").button YouTube
       a(href="https://www.flickr.com/people/193818387@N02/", target="_blank").button Flickr
       
   main
