--- a/views/assignments.pug
+++ b/views/assignments.pug
@@ -7,6 +7,7 @@ block layout-content
         a(href="/..").home Alex Pitts
     div.links
       a(href="/assignments").button Assignments
+      a(href="https://github.com/alexgpitts", target="_blank").button GitHub
       a(href="../images/resume.pdf", target="_blank").button Resume
       //- a(href="https://www.youtube.com/channel/UCcKKS_xiZP7_-riaaGBYG9Q",target="_blank").button YouTube
       a(href="https://www.flickr.com/people/193818387@N02/", target="_blank").button Flickr
