--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ block layout-content
     div.about
       h1.aboutme About Me
       img(src='./images/profile.png').profile
-      p.description My name is Alex Pitts. I am currently a senior at Oregon State University majoring in Computer Science (Systems). I plan on becoming a software engineer after graduation in spring of 2022. 
+      p.description My name is Alex Pitts. I am currently a senior at Oregon State University majoring in Computer Science (Systems). I am becoming a software engineer after graduation in the spring of 2022. In addition, I have a strong interest in computer graphics, oceanography, aviation, automotive, photography, and music.  
   
   h2#education Education
   img(src='./images/diploma.jpg')#diploma
