updated nav bar and fixed OSU assignments page

--- a/views/OSU.pug
+++ b/views/OSU.pug
@@ -8,13 +8,13 @@ block layout-content
     div.links
       a(href="/assignments").button Assignments
       a(href="https://github.com/alexgpitts", target="_blank").button GitHub
-      a(href="../images/resume.pdf", target="_blank").button Resume
       //- a(href="https://www.youtube.com/channel/UCcKKS_xiZP7_-riaaGBYG9Q",target="_blank").button YouTube
       a(href="https://www.flickr.com/people/193818387@N02/", target="_blank").button Flickr
+      a(href="../images/resume.pdf", target="_blank").button Resume
       
   main
     div.assignments
-      h1 LBCC Projects
+      h1 OSU Projects
       p Some of my Projects from Oregon State University
       div.assignments_container
         a(href="/OSU/smallsh").Proj
