--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -211,8 +211,13 @@ footer{
 }
 
 .assignments_container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
     color: black;
-    max-width: 900px;
+    max-width: 1200px;
     margin: auto;
     padding-top: 20px;
 }
