--- a/views/capstone.pug
+++ b/views/capstone.pug
@@ -14,13 +14,12 @@ block layout-content
       
   main
     div.about
-      h1.aboutme About Me
-      img(src='./images/profile.png').profile
-      p.description My name is Alex Pitts. I am currently a senior at Oregon State University majoring in Computer Science (Systems), pursuing a career in software engineer after graduation in the spring of 2022. In addition, I have a strong interest in computer graphics, oceanography, aviation, automotive, photography, and music. 
-  
-  h2#education Education
-  img(src='./images/diploma.jpg')#diploma
-  figcaption Associate of Science in Computer Science - Linn Benton Community College
-  footer 
+        h1.aboutme (Under Construction)
+        h1.aboutme Observing Ocean Wave Conditions Via Autonomous Ocean Gliders
+        p.description This was my Oregon State University capstone project.  
+        
+
+  img(src="../images/")#poster
+  footer  
     a(href="mailto: alexgpitts@gmail.com").foot contact me
       
