--- a/views/projects.pug
+++ b/views/projects.pug
@@ -6,7 +6,7 @@ block layout-content
       h1 
         a(href="/..").home Alex Pitts
     div.links
-      a(href="/assignments").button Assignments
+      a(href="/Projects").button Projects
       a(href="https://github.com/alexgpitts", target="_blank").button GitHub
       //- a(href="https://www.youtube.com/channel/UCcKKS_xiZP7_-riaaGBYG9Q",target="_blank").button YouTube
       a(href="https://www.flickr.com/people/193818387@N02/", target="_blank").button Flickr
@@ -17,9 +17,13 @@ block layout-content
       h1 OSU Projects
       p Some of my Projects from Oregon State University
       div.assignments_container
+        a(href="/OSU/capstone").Proj
+            img(src="./images/under.png")#website
+            figcaption Observing Ocean Wave Conditions - Capstone Project
+
         a(href="/OSU/smallsh").Proj
             img(src="./images/smallsh.png")#website
-            figcaption Small Shell
+            figcaption Small Shell - Operating Systems 1
       h1 LBCC Projects
       p Some of my Projects from Linn Benton Community College
       div.assignments_container
