Added project poster

--- a/views/capstone.pug
+++ b/views/capstone.pug
@@ -19,7 +19,7 @@ block layout-content
         p.description This was my Oregon State University capstone project.  
         
 
-  img(src="../images/")#poster
+  img(src="../images/capstone.jpg")#poster
   footer  
     a(href="mailto: alexgpitts@gmail.com").foot contact me
       
