--- a/views/projects.pug
+++ b/views/projects.pug
@@ -18,7 +18,7 @@ block layout-content
       p Some of my Projects from Oregon State University
       div.assignments_container
         a(href="/OSU/capstone").Proj
-            img(src="./images/under.png")#website
+            img(src="./images/capstone.jpg")#website
             figcaption Observing Ocean Wave Conditions - Capstone Project
 
         a(href="/OSU/smallsh").Proj
